Bot was updated with Bit-board state with precomputed line masks, and Macro fork detection in both eval and move ordering